[package]
name = "componentize-mbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
wit-bindgen-core = "0.16.0"
wit-parser = "0.13.1"
