[package]
name = "componentize-mbt-cli"
version = "0.1.0"
authors = ["Fantix King <fantix.king@gmail.com>"]
edition = { workspace = true }
license = "MulanPSL-2.0"
repository = "https://gitee.com/fantix/componentize-mbt"
homepage = "https://gitee.com/fantix/componentize-mbt"
readme = "README.md"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "moonbit"]
description = "CLI tool for MoonBit support of the WASM compoment model."

[workspace]
exclude = ["examples/basic", "examples/wasi"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
heck = { version = "0.4.1", features = ["unicode"] }
wasm-metadata = "0.10.16"
wast = "70.0.2"
wit-component = "0.20.0"
wit-bindgen-core = "0.16.0"
wit-parser = "0.13.1"
wit-bindgen-mbt = { path = "crates/bindgen", version = "0.1.0", features = ["clap"] }
componentize-mbt = { path = "crates/componentize", version = "0.1.0", features = ["clap"] }

[[bin]]
name = "componentize-mbt-cli"

[dependencies]
anyhow = { workspace = true }
wit-bindgen-core = { workspace = true }
clap = { workspace = true }
wit-parser = { workspace = true }
wit-bindgen-mbt = { workspace = true }
componentize-mbt = { workspace = true }
