[package]
name = "componentize-mbt"
version = "0.1.0"
authors = ["Fantix King <fantix.king@gmail.com>"]
edition.workspace = true
license = "MulanPSL-2.0"
repository = "https://gitee.com/fantix/componentize-mbt"
homepage = "https://gitee.com/fantix/componentize-mbt"
readme = "../../README.md"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "moonbit"]
description = "Tool for wrapping MoonBit-generated WAT into a WASM component."

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
wast = { workspace = true }
wit-component = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-bindgen-mbt = { workspace = true }
